# cc-kjaymiller-python-package

./: README.md  cookiecutter.json
tests/: test.py
{{cookiecutter.project_name}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: publish.yml
{{cookiecutter.project_slug}}/tests/: test.py
