[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project]
name = "{{cookiecutter.project_slug|lower|replace(' ', '-')}}"
dynamic = {{cookiecutter._dynamic}}
description = "{{cookiecutter.description}}"
readme = "README.md"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    ]

[tool.setuptools]
package-dir = {"" = "{{cookiecutter.project_slug}}"}

[project.urls]
homepage = "{{cookiecutter.url}}"
repository = "{{cookiecutter.url}}"

[tool.pytest.ini_options]
pythonpath = ["{{cookiecutter.project_slug}}"]
